--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'com.codeborne:selenide:5.19.0'
-
+    testImplementation 'io.rest-assured:rest-assured:4.3.0'
+    testImplementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
